--- a/test/demo.html
+++ b/test/demo.html
@@ -17,8 +17,8 @@ body {
 }
 .minislider {
     width: 100%;
-    padding-bottom: 60%;
     margin: 40px auto;
+    --aspect-ratio: calc(16 / 9); /* 16 : 9 */
 }
 </style>
 <title>mini slider test demo</title>
@@ -35,9 +35,9 @@ body {
 </div>
 
 <div class="bullets">
-    <a href="javascript:void(0)" data-slide="0" title="1" class="bullet"></a>
-    <a href="javascript:void(0)" data-slide="1" title="2" class="bullet"></a>
-    <a href="javascript:void(0)" data-slide="2" title="3" class="bullet"></a>
+    <a href="javascript:void(0)" class="bullet" data-slide="0" title="1"></a>
+    <a href="javascript:void(0)" class="bullet" data-slide="1" title="2"></a>
+    <a href="javascript:void(0)" class="bullet" data-slide="2" title="3"></a>
 </div>
 
 <a href="javascript:void(0)" class="arrow prev" data-slide="prev" title="Previous"></a>
