--- a/test/demo.html
+++ b/test/demo.html
@@ -20,6 +20,9 @@ body {
     margin: 40px auto;
     --aspect-ratio: calc(16 / 9); /* 16 : 9 */
 }
+.minislider.two {
+    --slides-per-area: 2;
+}
 </style>
 <title>mini slider test demo</title>
 </head>
@@ -38,6 +41,27 @@ body {
     <a href="javascript:void(0)" class="bullet" data-slide="0" title="1"></a>
     <a href="javascript:void(0)" class="bullet" data-slide="1" title="2"></a>
     <a href="javascript:void(0)" class="bullet" data-slide="2" title="3"></a>
+</div>
+
+<a href="javascript:void(0)" class="arrow prev" data-slide="prev" title="Previous"></a>
+<a href="javascript:void(0)" class="arrow next" data-slide="next" title="Next"></a>
+
+</div>
+
+<div class="minislider two">
+
+<div class="slider" data-slide="0" data-slides="4">
+    <a class="slide" href="https://en.wikipedia.org/wiki/Landscape" target="_blank" style="background-image:url('./imgs/1.jpg')"></a>
+    <a class="slide" href="https://en.wikipedia.org/wiki/Landscape" target="_blank" style="background-image:url('./imgs/3.jpg')"></a>
+    <figure class="slide" style="background-image:url('./imgs/4.jpg')"></figure>
+    <a class="slide" href="https://en.wikipedia.org/wiki/Landscape" target="_blank" style="background-image:url('./imgs/1.jpg')"></a>
+</div>
+
+<div class="bullets">
+    <a href="javascript:void(0)" class="bullet" data-slide="0" title="1"></a>
+    <a href="javascript:void(0)" class="bullet" data-slide="1" title="2"></a>
+    <a href="javascript:void(0)" class="bullet" data-slide="2" title="3"></a>
+    <a href="javascript:void(0)" class="bullet" data-slide="3" title="4"></a>
 </div>
 
 <a href="javascript:void(0)" class="arrow prev" data-slide="prev" title="Previous"></a>
