--- a/test/demo.html
+++ b/test/demo.html
@@ -29,7 +29,7 @@ body {
 <body>
 <h1>mini slider v.<script>document.write(minislider.VERSION);</script> demo</h1>
 
-<div class="minislider">
+<div class="minislider" style="--auto-play:1;--delay:3000ms;">
 
 <div class="slider" data-slide="1" data-slides="3">
     <a class="slide" href="https://en.wikipedia.org/wiki/Landscape" target="_blank" style="background-image:url('./imgs/1.jpg')"></a>
